[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/inventorySlot.gd" type="Script" id=1]
[ext_resource path="res://textures/invSlot.png" type="Texture" id=2]
[ext_resource path="res://textures/health.png" type="Texture" id=3]
[ext_resource path="res://fonts/BabelStoneModern.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 13
font_data = ExtResource( 4 )

[sub_resource type="ShortCut" id=2]

[sub_resource type="Animation" id=5]
resource_name = "anim"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("container/item:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.01, 0.01 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("container/item:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 270.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("container/item:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="slot" type="Control"]
light_mask = 2
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
script = ExtResource( 1 )

[node name="container" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="textureRect" type="TextureRect" parent="container"]
light_mask = 2
margin_right = 60.0
margin_bottom = 60.0
texture = ExtResource( 2 )

[node name="item" type="TextureRect" parent="container"]
light_mask = 2
margin_right = 60.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 30, 30 )
texture = ExtResource( 3 )

[node name="container" type="Node" parent="container"]

[node name="number" type="Label" parent="."]
light_mask = 2
margin_left = 32.0
margin_top = 39.0
margin_right = 54.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "N/A"
align = 2

[node name="btn" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 2 )
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="animPlayer" type="AnimationPlayer" parent="."]
anims/anim = SubResource( 5 )
[connection signal="button_down" from="btn" to="." method="_on_btn_button_down"]
